# sutki

./: Cargo.toml  README.md  Trunk.toml  cats.rs  index.html  lib.rs  rust-toolchain  settings.rs
docs/: index.html  r2024-12-27-clidle.js  r2024-12-27-clidle_bg.wasm  r2024-12-27-sutki.js  r2024-12-27-sutki_bg.wasm
docs/.stage/: r2024-12-27-sutki_bg.wasm
src/: automation.rs  cats.rs  challenges.rs  format.rs  lib.rs  main.rs  prestige.rs  prestigetwo_placeholder.rs  settings.rs  upgrades.rs
