[package]
name = "r2024-12-27-sutki"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
ron = "0.8"
chrono = "0.4.39"
eframe = { version = "0.30", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
egui = "0.30.0"
egui_extras = {version = "0.30.0", features = ["all_loaders"]}
image = { version = "0.25", features = ["jpeg", "png"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
base64 = "0.22.1"
rand = "0.9.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)


[profile.release]
opt-level = 2 # fast and small wasm
